examples/test/testpolicy62.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy62
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key38: value38
      key29: value48
      key9: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value42
          key24: value44
          key14: value39
      podSelector:
        matchLabels:
          key47: value2
          key19: value45
          key40: value35
